<resources>
    <string name="app_name">WhiteBoard</string>
    <string name="dash_on">Dash On</string>
    <string name="dash_off">Dash Off</string>
    <string name="blur_on">Blur On</string>
    <string name="blur_off">Blur Off</string>
    <string name="clear_content">Clear Content</string>
    <string name="brush_width">Brush Width</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="skip">Skip</string>
    <string name="speed_bar">Speed</string>
</resources>
